# FileSystem

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  QT_PATH  README.md  main.cpp
form/: filelistview.ui  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  reformat.cpp  reformat.ui  textedit.cpp  textedit.h  textedit.ui
include/: data.h  directory.h  file.h  filelistview.h  filesystem.h  login.h  mainwindow.h  reformat.h  user.h
src/: data.cpp  directory.cpp  file.cpp  filelistview.cpp  filesystem.cpp  login.cpp  main.cpp  mainwindow.cpp  reformat.cpp  user.cpp
